packages/core/src/select/_select-styles.scss
@use 'sass:map';
@use '~@mezzanine-ui/system/palette';
@use '~@mezzanine-ui/system/transition';
@use '~@mezzanine-ui/system/typography';
@use '../text-field';
@use './select' as *;

$popper-vertical-padding: 4px !default;
$popper-horizontal-padding: 0 !default;
$tags-container-padding: 4px !default;
$tags-gap: 4px !default;

.#{$prefix} {
  position: relative;
  overflow: hidden;

  &--full-width {
    width: 100%;
  }
}

.#{$tree-select-prefix} {
  position: relative;
}

.#{$trigger-prefix} {
  input {
    padding-left: var(--#{text-field.$prefix}-padding-left);
    padding-right: var(--#{text-field.$prefix}-padding-right);

    &:read-only {
      cursor: pointer;
    }

    /* clears the 'X' from Internet Explorer */
    &[type='search']::-ms-clear,
    &[type='search']::-ms-reveal {
      display: none;
      width: 0;
      height: 0;
    }

    /* clears the 'X' from Chrome */
    &[type='search']::-webkit-search-decoration,
    &[type='search']::-webkit-search-cancel-button,
    &[type='search']::-webkit-search-results-button,
    &[type='search']::-webkit-search-results-decoration {
      display: none;
    }
  }

  &__tags-input-wrapper {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-wrap: wrap;

    &--ellipsis {
      flex-wrap: unset;
    }
  }

  &__tags-input {
    flex: 1;
    min-width: 30%;
  }

  &__tags {
    padding-top: $tags-container-padding;
    padding-left: $tags-container-padding;
    width: auto;
    max-width: calc(100% - var(--#{text-field.$prefix}-prefix-x-gap) - var(--#{text-field.$prefix}-icon-size));
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-self: flex-start;

    &--ellipsis {
      flex-wrap: unset;
    }

    > span {
      margin-right: $tags-gap;
      margin-bottom: $tags-gap;
    }
  }

  & &__suffix-action-icon {
    transition:
      transition.standard(transform),
      transition.standard(color),
      transition.standard(opacity);
    will-change: transform, color, opacity;

    &--active {
      transform: rotate(180deg);
    }
  }
}

.#{$popper-prefix} {
  width: auto;
  padding: $popper-vertical-padding $popper-horizontal-padding;
  background-color: palette.color(surface);
  color: palette.color(text-primary);
  box-sizing: border-box;
}

.#{$tree-prefix} {
  box-sizing: border-box;
  padding: 0 8px;
}

.#{$autocomplete-prefix} {
  width: 100%;
  height: 32px;
  padding: 0 12px 0 16px;
  border: none;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  background-color: palette.color(bg);
  box-sizing: border-box;
  text-align: left;
  cursor: pointer;

  p {
    flex: 1;
    margin: 0;
    color: palette.color(text-primary);

    @include typography.variant(input2);
  }

  &__icon {
    font-size: 24px;
    color: palette.color(text-secondary);
  }
}

